--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Join Email List!</title>
-	</head>
-	<body>
-		<main>
-		<h1>Please join our email list</h1>
-		<form id="email_form" name="email_form"
-			action="join.html" method="get">
-			<label for="mail_address1">Email address:</label>
-			<input type="text" id="email_address1" name="email_address1"> 
-			<span id="email_address1_error">*</span>
-			<br />
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Join Email List!</title>
+    <link rel="stylesheet" href="email_list.css">
 
-			<label for="mail_address2">Re-enter email address:</label>
-			<input type="text" id="email_address2" name="email_address2"> 
-			<span id="email_address2_error">*</span>
-			<br />
+</head>
+<body>
+<main>
+    <h1>Please join our email list</h1>
+    <form id="email_form" name="email_form"
+          action="join.html" method="get">
 
-			<label for="first_name">First name:</label>
-			<input type="text" id="first_name" name="first_name"> 
-			<span id="first_name_error">*</span>
-			<br />
+        <label for="email_address1">Email address:</label>
+        <input type="text" id="email_address1" name="email_address1">
+        <span id="email_address1_error">*</span><br/>
 
-			<input type="button" id="join_list" value="Join our list">
-		</form>
-		</main>
-	</body>
+        <label for="email_address2">Re-enter email address:</label>
+        <input type="text" id="email_address2" name="email_address2">
+        <span id="email_address2_error">*</span><br/>
+
+        <label for="first_name">First name:</label>
+        <input type="text" id="first_name" name="first_name">
+        <span id="first_name_error">*</span><br/>
+
+        <label>&nbsp;</label>
+        <input type="button" id="join_list" value="Join our list">
+    </form>
+</main>
+<script src="email_list.js"></script>
+</body>
 </html>
 
