--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <title>Join Email List!</title>
     <link rel="stylesheet" href="email_list.css">
-
+    <script type="text/javascript" src="email_list.js"></script>
 </head>
 <body>
 <main>
-    <h1>Please join our email list</h1>
-    <form id="email_form" name="email_form"
-          action="join.html" method="get">
+    <h1>Join Our Email List</h1>
+    <form id="email_form" name="email_form" action="join.html" method="get">
 
         <label for="email_address1">Email address:</label>
         <input type="text" id="email_address1" name="email_address1">
@@ -28,7 +27,6 @@
         <input type="button" id="join_list" value="Join our list">
     </form>
 </main>
-<script src="email_list.js"></script>
 </body>
 </html>
 
